[Modify]thisを理解して、methodから自分のdataにアクセスする

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Vue.js</title>
 </head>
 <body>
   <script src="vue.js"></script>
 
   <div id="app">
-    <p>{{message}}</p>
-    <button v-on:click="reverseMessage">メッセージ反転</button>
+    <p>{{ sayHi() }}</p>
   </div>
   <script>
     new Vue({
@@ -19,8 +18,8 @@
         message: 'Hello World!',
       },
       methods: {
-        reverseMessage: function() {
-          this.message = this.message.split('').reverse().join('')
+        sayHi: function () {
+          return this.message;
         }
       }
     })
