--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="vue.js"></script>
 
   <div id="app">
+    <p v-once>{{ message }}</p>
     <p>{{ sayHi() }}</p>
   </div>
   <script>
@@ -18,8 +19,9 @@
         message: 'Hello World!',
       },
       methods: {
-        sayHi: function () {
-          return this.message;
+        sayHi() {
+          this.message = 'Hello VueJS'
+          return 'Hi'
         }
       }
     })
