--- a/index.html
+++ b/index.html
@@ -9,22 +9,19 @@
   <script src="vue.js"></script>
 
   <div id="app">
-    <a v-bind:href="url">Google</a>
-    <!-- v-bindは省略できる -->
-    <a :href="url">Google</a>
-
-    <a :[attribute]="url">Google</a>
-    <a v-bind="twitterObject">Twitter</a>
+    <p>現在{{ number }}回クリックされています</p>
+    <button v-on:click="countUp">カウントアップ</button>
   </div>
+
   <script>
     new Vue({
       el: '#app',
       data: {
-        url: 'https://google.com',
-        attribute: 'href',
-        twitterObject: {
-          href: 'https://twitter.com',
-          id: 32
+        number: 0
+      },
+      methods: {
+        countUp: function() {
+          this.number += 1
         }
       }
     })
