[Modify]v-on使用時にイベントオブジェクトを使ってイベントの情報を取得する

--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
   <div id="app">
     <p>現在{{ number }}回クリックされています</p>
     <button v-on:click="countUp">カウントアップ</button>
+    <p v-on:mousemove="changeMousePosition">マウスを載せてください</p>
+    <P>X:{{ x }}、Y:{{ y }}</P>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        number: 0
+        number: 0,
+        x:0,
+        y:0
       },
       methods: {
         countUp: function() {
           this.number += 1
+        },
+        changeMousePosition: function(event) {
+          this.x = event.clientX;
+          this.y = event.clientY;
         }
       }
     })
