--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <div id="app">
     <p>現在{{ number }}回クリックされています</p>
-    <button v-on:click="countUp">カウントアップ</button>
-    <p v-on:mousemove="changeMousePosition">マウスを載せてください</p>
+    <button v-on:click="countUp(2)">カウントアップ</button>
+    <p v-on:mousemove="changeMousePosition(3, $event)">マウスを載せてください</p>
     <P>X:{{ x }}、Y:{{ y }}</P>
   </div>
 
@@ -24,12 +24,12 @@
         y:0
       },
       methods: {
-        countUp: function() {
-          this.number += 1
+        countUp: function(times) {
+          this.number += 1 * times
         },
-        changeMousePosition: function(event) {
-          this.x = event.clientX;
-          this.y = event.clientY;
+        changeMousePosition: function(divideNumber, event) {
+          this.x = event.clientX / divideNumber;
+          this.y = event.clientY / divideNumber;
         }
       }
     })
