--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <div id="app">
     <p>現在{{ number }}回クリックされています</p>
     <button v-on:click="countUp(2)">カウントアップ</button>
-    <p v-on:mousemove="changeMousePosition(3, $event)">マウスを載せてください</p>
-    <P>X:{{ x }}、Y:{{ y }}</P>
+    <p v-on:mousemove="changeMousePosition(3, $event)">マウスを載せてください
+      <span v-on:mousemove.stop.prevent>反応しないでください</span></p>
+      <a v-on:click.prevent.stop="noEvent" href="https://google.com">Google</a>
+    <p>X:{{ x }}、Y:{{ y }}</p>
   </div>
 
   <script>
