--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <span v-on:mousemove.stop.prevent>反応しないでください</span></p>
       <a v-on:click.prevent.stop="noEvent" href="https://google.com">Google</a>
     <p>X:{{ x }}、Y:{{ y }}</p>
+    <input type="text" v-on:keyup.space.enter="myAlert">
   </div>
 
   <script>
@@ -32,6 +33,9 @@
         changeMousePosition: function(divideNumber, event) {
           this.x = event.clientX / divideNumber;
           this.y = event.clientY / divideNumber;
+        }
+        ,myAlert() {
+          alert('アラートする');
         }
       }
     })
