--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 
   <div id="app">
     <p>現在{{ number }}回クリックされています</p>
-    <button v-on:click="countUp(2)">カウントアップ</button>
-    <p v-on:mousemove="changeMousePosition(3, $event)">マウスを載せてください
-      <span v-on:mousemove.stop.prevent>反応しないでください</span></p>
-      <a v-on:click.prevent.stop="noEvent" href="https://google.com">Google</a>
-    <p>X:{{ x }}、Y:{{ y }}</p>
-    <input type="text" v-on:keyup.space.enter="myAlert">
+    <button v-on:[event]="countUp">カウントアップ</button>
   </div>
 
   <script>
@@ -23,19 +18,11 @@
       el: '#app',
       data: {
         number: 0,
-        x:0,
-        y:0
+        event: 'click'
       },
       methods: {
         countUp: function(times) {
-          this.number += 1 * times
-        },
-        changeMousePosition: function(divideNumber, event) {
-          this.x = event.clientX / divideNumber;
-          this.y = event.clientY / divideNumber;
-        }
-        ,myAlert() {
-          alert('アラートする');
+          this.number += 1;
         }
       }
     })
