--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div id="app">
     <p>現在{{ number }}回クリックされています</p>
-    <button v-on:[event]="countUp">カウントアップ</button>
+    <button @[event]="countUp">カウントアップ</button>
   </div>
 
   <script>
