[Modify]v-modelを利用して、双方向バインディングを作成する

--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
   <script src="vue.js"></script>
 
   <div id="app">
-    <p>現在{{ number }}回クリックされています</p>
-    <button @[event]="countUp">カウントアップ</button>
+    <input type="text" v-model="message">
+    <h1>{{ message }}</h1>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        number: 0,
-        event: 'click'
-      },
-      methods: {
-        countUp: function(times) {
-          this.number += 1;
-        }
+        message: 'こんにちは'
       }
     })
   </script>
