[Modify]computedプロパティを使って、動的なデータを表現する

--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
   <script src="vue.js"></script>
 
   <div id="app">
-    <input type="text" v-model="message">
-    <h1>{{ message }}</h1>
+    <p>{{ counter }}</p>
+    <button @click="counter += 1">+1</button>
+    <p>{{ lessThanThree }}</p>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        message: 'こんにちは'
+        counter: 0
+      },
+      computed: {
+        lessThanThree: function() {
+          return this.counter > 3 ? '3より上' : '3以下'
+        }
       }
     })
   </script>
