--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div id="app">
     <p>{{ counter }}</p>
     <button @click="counter += 1">+1</button>
-    <p>{{ lessThanThree }}</p>
+    <p>{{ lessThanThreeComputed }}</p>
+    <p>{{ lessThanThreeMethod() }}</p>
   </div>
 
   <script>
@@ -21,7 +22,12 @@
         counter: 0
       },
       computed: {
-        lessThanThree: function() {
+        lessThanThreeComputed: function() {
+          return this.counter > 3 ? '3より上' : '3以下'
+        }
+      },
+      methods: {
+        lessThanThreeMethod: function() {
           return this.counter > 3 ? '3より上' : '3以下'
         }
       }
