--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <div id="app">
     <p>{{ counter }}</p>
     <button @click="counter += 1">+1</button>
-    <p>{{ lessThanThreeComputed }}</p>
-    <p>{{ lessThanThreeMethod() }}</p>
+    <p>{{ lessThanThree }}</p>
   </div>
 
   <script>
@@ -22,13 +21,16 @@
         counter: 0
       },
       computed: {
-        lessThanThreeComputed: function() {
+        lessThanThree: function() {
           return this.counter > 3 ? '3より上' : '3以下'
         }
       },
-      methods: {
-        lessThanThreeMethod: function() {
-          return this.counter > 3 ? '3より上' : '3以下'
+      watch: {
+        counter: function() {
+          var vm = this;
+          setTimeout(function(){
+            vm.counter = 0
+          }, 3000)
         }
       }
     })
