--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
   <div id="app">
     <p>{{ counter }}</p>
-    <button @click="counter += 1">+1</button>
-    <p>{{ lessThanThree }}</p>
+    <button @click="countUp">+1</button>
+    <button @click="countUp()">+1</button>
+    <p>{{ doubleCounterComputed }}</p>
+    <p>{{ doubleCounterMethod() }}</p>
   </div>
 
   <script>
@@ -21,16 +23,16 @@
         counter: 0
       },
       computed: {
-        lessThanThree: function() {
-          return this.counter > 3 ? '3より上' : '3以下'
+        doubleCounterComputed: function() {
+          return this.counter * 2;
         }
       },
-      watch: {
-        counter: function() {
-          var vm = this;
-          setTimeout(function(){
-            vm.counter = 0
-          }, 3000)
+      methods: {
+        countUp: function() {
+          this.counter += 1;
+        },
+        doubleCounterMethod: function() {
+          return this.counter * 2;
         }
       }
     })
