--- a/index.html
+++ b/index.html
@@ -7,32 +7,32 @@
 </head>
 <body>
   <script src="vue.js"></script>
+  <style>
+    .red {
+      color: red;
+    }
+    .bg-blue {
+      background-color: blue;
+    }
+  </style>
 
   <div id="app">
-    <p>{{ counter }}</p>
-    <button @click="countUp">+1</button>
-    <button @click="countUp()">+1</button>
-    <p>{{ doubleCounterComputed }}</p>
-    <p>{{ doubleCounterMethod() }}</p>
+    <h1 :class="classObject">Hello</h1>
+    <button @click="isActive = !isActive">切り替え</button>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        counter: 0
+        isActive: true
       },
       computed: {
-        doubleCounterComputed: function() {
-          return this.counter * 2;
-        }
-      },
-      methods: {
-        countUp: function() {
-          this.counter += 1;
-        },
-        doubleCounterMethod: function() {
-          return this.counter * 2;
+        classObject: function() {
+          return {
+            red: this.isActive,
+            'bg-blue': !this.isActive
+          }
         }
       }
     })
