--- a/index.html
+++ b/index.html
@@ -17,27 +17,15 @@
   </style>
 
   <div id="app">
-    <h1 :class="classObject">Hello</h1>
-    <button @click="isActive = !isActive">切り替え</button>
-
-    <h1 :class="[{red: isActive}, bg]">Hello</h1>
+    <h1 :style="{color: textColor, 'background-color': bgColor}">Hello</h1>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        isActive: true,
-        color: 'red',
-        bg: 'bg-blue'
-      },
-      computed: {
-        classObject: function() {
-          return {
-            red: this.isActive,
-            'bg-blue': !this.isActive
-          }
-        }
+        textColor: 'red',
+        bgColor: 'blue'
       }
     })
   </script>
