[Modify]複数のスタイルオブジェクトを配列構文を用いて適応させる

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 
   <div id="app">
-    <h1 :style="styleObject">Hello</h1>
+    <h1 :style="[styleObject, baseStyles]">Hello</h1>
   </div>
 
   <script>
@@ -27,6 +27,9 @@
         styleObject: {
           color: 'red',
           'background-color': 'blue'
+        },
+        baseStyles: {
+          fontSize: '60px'
         }
       }
     })
