--- a/index.html
+++ b/index.html
@@ -17,20 +17,14 @@
   </style>
 
   <div id="app">
-    <h1 :style="[styleObject, baseStyles]">Hello</h1>
+    <p v-if="ok">OK!</p>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        styleObject: {
-          color: 'red',
-          'background-color': 'blue'
-        },
-        baseStyles: {
-          fontSize: '60px'
-        }
+        ok: true,
       }
     })
   </script>
