[Modify]v-elseを使って、v-ifがfalseの場合の処理を書く

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 
   <div id="app">
     <p v-if="ok">OK!</p>
+    <p v-else>Not OK...</p>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        ok: true,
+        ok: false,
       }
     })
   </script>
