[Modify]v-else-ifを使って、複雑な条件式を作る

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <div id="app">
     <p v-if="ok">OK!</p>
+    <p v-else-if="maybeOk">maybe OK!</p>
     <p v-else>Not OK...</p>
   </div>
 
@@ -26,6 +27,7 @@
       el: '#app',
       data: {
         ok: false,
+        maybeOk: true
       }
     })
   </script>
